crates/swc/tests/tsc-references/constructorOverloadsWithDefaultValues.1.normal.js
//// [constructorOverloadsWithDefaultValues.ts]
//! 
//!   x A parameter initializer is only allowed in a function or constructor implementation
//!    ,----
//!  3 | constructor(x = 1); // error
//!    :             ^^^^^
//!    `----
//! 
//!   x A parameter initializer is only allowed in a function or constructor implementation
//!     ,----
//!  10 | constructor(x = 1); // error
//!     :             ^^^^^
//!     `----
